--- a/rython/exercises/flask_click/templates/form.html
+++ b/rython/exercises/flask_click/templates/form.html
@@ -5,7 +5,7 @@
         <label for="film_name">Film name:</label><br />
         <input type="text" id="film_name" name="film_name" maxlength="32" value=""><br />
         <label for="stars">Star Rating (1 to 5):</label><br>
-        <input type="text" id="stars" name="stars" value="1" maxlength="1"><br><br>
+        <input type="text" id="stars" name="stars" value="1" maxlength="1"><br /><br />
         <input type="submit" value="Submit">
     </form>
     <p>
